overflow scroll fixed

--- a/src/styles/modules/navMenu.scss
+++ b/src/styles/modules/navMenu.scss
@@ -14,6 +14,9 @@
 
   .nav_menu {
 
+    max-height: 100vh;
+    overflow: auto;
+
     > .nav_menu__item {
       min-width: $navMenuWidth;
       min-height: 50px;
